--- a/src/Main.css
+++ b/src/Main.css
@@ -1,17 +1,52 @@
+@import "https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap";
+
+/* Variables */
+
+:root {
+    --background: #c9a0dc;
+    --primary: #522d89;
+    --secondary: #aa3939;
+}
+
+/* Reset */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+body {
+  font-family: 'Prompt', sans-serif;
+}
+
+input {
+    font-family: inherit;
+}
+
+select {
+    font-family: inherit;
+}
+
 li {
     list-style: none;
 }
 
+a {
+    text-decoration: none;
+}
+
+/* Main */
+
+header {
+    background-color: var(--background);
+    padding: 1em;
+}
+
 .container {
     margin: 0 auto;
-    background-color: red;
     width: 95vw;
+    padding: 1em;
 }
 
 .logo {
@@ -22,23 +57,88 @@ li {
 .navbar {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    background-color: blue;
+    justify-content: space-between;
     margin: 1.5em 0;
+    align-items: stretch;
 }
+
+/* Buttons */
 
 .btn {
     display: block;
-    font-size: 1.5em;
-    margin: 0 .5em;
+    text-align: center;
     color: #fff;
+    font-size: 1.5em;
+    margin: 1em 0;
     padding: .5em 1em;
+    letter-spacing: 0.1em;
+    border-radius: 20px;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    background-color: var(--secondary);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.btn:hover {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .register {
     width: 100%;
-    background-color: purple;
+    background-color: var(--primary);
     text-align: center;
     font-size: 2em;
     margin: 0;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+/* Form */
+form {
+    display: flex;
+    flex-direction: column;
+    padding: 2em;   
+}
+
+#admin h1 {
+    text-align: center;
+}
+
+form input, form select {
+    margin: 1em 0;
+    font-size: 1.5rem;
+}
+
+#admin {
+    height: 100vh;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 1em 0;
+}
+
+table, th, td {
+    border: 1px solid #ddd;
+    padding: .5em;    
+}
+
+tr:nth-child(even){background-color: #f2f2f2;}
+
+th {
+    font-weight: normal;
+    font-size: 1.5em;
+    background-color: var(--primary);
+    color: white;
+}
+
+td {
+    text-align: center;
+}
+
+td:first-child {
+    text-align: left;
+}
+
+td:last-child {
+    width: 1%;
 }
